--- a/app/src/main/res/layout/activity_main_search_bar.xml
+++ b/app/src/main/res/layout/activity_main_search_bar.xml
@@ -5,24 +5,30 @@
     <data>
 
         <variable
-            name="destinationId"
-            type="int" />
+            name="activity"
+            type="com.example.myfit.ui.main.MainActivity" />
+        <variable
+            name="model"
+            type="com.example.myfit.ui.main.MainActivityViewModel" />
     </data>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-        destinationId="@{destinationId}"
+        destinationId="@{model.destinationIdLive}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:theme="@style/myEditTextOutlineColor"
         app:endIconMode="clear_text"
         app:placeholderText="@string/menu_search"
+        android:visibility="gone"
         app:placeholderTextAppearance="@style/myTextSize10sdp"
         app:startIconDrawable="@drawable/icon_search">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/acTv"
+            app:adapter="@{activity.autoCompleteAdapter}"
+            data="@{model.autoCompleteLive}"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_36sdp"
             android:background="@android:color/transparent"
