--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,6 @@
             app:contentInsetStart="0dp"
             app:elevation="@dimen/_6sdp"
             app:fabAlignmentMode="center"
-            app:layout_behavior=".util.BottomNavigationBehavior"
             app:fabCradleMargin="@dimen/_6sdp">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -73,10 +72,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_add"
-            android:visibility="@{bottomAppBar.visibility}"
+            android:visibility="@{model.keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
             app:elevation="0dp"
             app:layout_anchor="@id/bottomAppBar"
-            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
             app:tint="?colorPrimary"
             tools:ignore="ContentDescription" />
 
